--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "tests.js",
   "type": "module",
   "scripts": {
-    "test": "nyc mocha Tests/tests.js --exit --timeout=10000",
-    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
+    "test": "nyc mocha --exit --timeout=10000",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -31,5 +31,14 @@
   "directories": {
     "lib": "./lib",
     "tests": "./Tests"
+  },
+  "nyc": {
+    "all": true,
+    "include":[
+      "lib/src/*.js"
+    ],
+    "exclude":[
+      "lib/src/.internal/**"
+    ]
   }
 }
