--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   "dependencies": {
     "chai": "^4.3.7",
     "debug": "^4.3.4",
-    "mocha": "^10.1.0",
-    "nyc": "^15.1.0"
+    "mocha": "^10.1.0"
   },
   "devDependencies": {
     "coveralls": "^3.1.1",
-    "mocha-lcov-reporter": "^1.3.0"
+    "mocha-lcov-reporter": "^1.3.0",
+    "nyc": "^15.1.0"
   },
   "directories": {
     "lib": "./lib",
@@ -34,10 +34,10 @@
   },
   "nyc": {
     "all": true,
-    "include":[
+    "include": [
       "lib/src/*.js"
     ],
-    "exclude":[
+    "exclude": [
       "lib/src/.internal/**"
     ]
   }
