--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "nyc mocha --exit --timeout=10000",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc report --reporter=lcov",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -34,11 +35,13 @@
   },
   "nyc": {
     "all": true,
+    "check-coverage": "false",
     "include": [
       "lib/src/*.js"
     ],
     "exclude": [
       "lib/src/.internal/**"
-    ]
+    ],
+    "report-dir": "./coverage"
   }
 }
