--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -7,11 +7,12 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
+    
     - name: Clone repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2.5.0
 
     - name: Set node.js version
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3.5.1
       with:
         node-version: 19.x
 
@@ -19,9 +20,13 @@ jobs:
       run: npm install
 
     - name: Run tests
-      run: npm run test && npm run coveralls
+      run: |
+      npm run test
+      npm run coveralls
 
     - name: Coveralls
-      uses: coverallsapp/github-action@master
+      uses: coverallsapp/github-action@1.1.3
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
+        flag-name: "Unit"
+
