--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -7,7 +7,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-    
+
     - name: Clone repository
       uses: actions/checkout@v2.5.0
 
@@ -20,9 +20,7 @@ jobs:
       run: npm install
 
     - name: Run tests
-      run: |
-      npm run test
-      npm run coveralls
+      run: npm run test && npm run coveralls
 
     - name: Coveralls
       uses: coverallsapp/github-action@1.1.3
