--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Install npm dependencies
       run: npm install
 
-    - name: Run tests
-      run: npm run test && npm run coveralls
+    - name: Run tests and generate lcov for coveralls
+      run: npm run coveralls
 
     - name: Coveralls
       uses: coverallsapp/github-action@1.1.3
